add native image build script